--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,3 @@
 [AudioPlayer]
-path = F:/Musik/DnB/! Hospitality House Party-NHS393DD mp3 dabstep.ru team
+path = F:/Musik/DnB/Camo & Krooked - Mosaik (2017)
 
